fixed: animation on mobile tabs

--- a/app/src/sass/partials/_cabinet.scss
+++ b/app/src/sass/partials/_cabinet.scss
@@ -104,7 +104,6 @@
           @media (max-width: 767px) {
             animation: scroll 0.3s ease-in;
             position: relative;
-            transition: all 2.3s linear;
             @keyframes scroll {
               from {
                 top: -500px;
